--- a/package.json
+++ b/package.json
@@ -12,10 +12,18 @@
     "zip": "wxt zip",
     "zip:firefox": "wxt zip -b firefox",
     "compile": "tsc --noEmit",
-    "postinstall": "wxt prepare"
+    "postinstall": "wxt prepare",
+    "test": "vitest run --coverage",
+    "test:watch": "vitest",
+    "test:e2e": "playwright test"
   },
   "devDependencies": {
+    "@playwright/test": "^1.51.1",
+    "@types/node": "^22.10.2",
+    "@vitest/coverage-v8": "^2.1.4",
+    "jsdom": "^24.1.3",
     "typescript": "^5.9.3",
+    "vitest": "^2.1.4",
     "wxt": "^0.20.6"
   }
 }
