--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ stats.html
 stats-*.json
 .wxt
 web-ext.config.ts
+coverage
+test-results
+playwright-report
 
 # Editor directories and files
 .vscode/*
