test(e2e): add test-only build entrypoints

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "wxt",
     "dev:firefox": "wxt -b firefox",
     "build": "wxt build",
+    "build:e2e": "wxt build -c tests/e2e/wxt.e2e.config.ts -m e2e",
     "build:firefox": "wxt build -b firefox",
     "zip": "wxt zip",
     "zip:firefox": "wxt zip -b firefox",
@@ -15,7 +16,7 @@
     "postinstall": "wxt prepare",
     "test": "vitest run --coverage",
     "test:watch": "vitest",
-    "test:e2e": "playwright test"
+    "test:e2e": "pnpm build:e2e && playwright test"
   },
   "devDependencies": {
     "@playwright/test": "^1.51.1",
