--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,15 +2,16 @@ name: CI
 
 on:
   push:
-    branches: ['**']
+    branches: [master]
   pull_request:
+  workflow_dispatch:
 
 jobs:
-  test:
+  quality:
+    name: Code Quality
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
@@ -18,27 +19,40 @@ jobs:
           version: 10
           run_install: false
 
-      - name: Setup Node
+      - name: Use Node.js 20
         uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: pnpm
           cache-dependency-path: pnpm-lock.yaml
 
-      - name: Install dependencies
-        run: pnpm install
+      - run: pnpm install
+      - run: pnpm compile
 
-      - name: Build
-        run: pnpm build
+  smoke:
+    name: Smoke Tests
+    runs-on: ubuntu-latest
+    needs: quality
+    steps:
+      - uses: actions/checkout@v4
 
-      - name: Unit + integration tests (coverage)
-        run: pnpm test
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10
+          run_install: false
 
-      - name: Install Playwright browsers
-        run: pnpm exec playwright install --with-deps chromium
+      - name: Use Node.js 20
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: pnpm
+          cache-dependency-path: pnpm-lock.yaml
 
-      - name: E2E tests
-        run: xvfb-run -a pnpm test:e2e
+      - run: pnpm install
+      - run: pnpm build
+      - run: pnpm exec playwright install --with-deps chromium
+      - run: xvfb-run -a pnpm test:e2e
 
       - name: Upload Playwright artifacts on failure
         if: failure()
@@ -47,3 +61,88 @@ jobs:
           name: playwright-artifacts
           path: test-results
           if-no-files-found: ignore
+
+  test:
+    name: Unit Tests
+    runs-on: ubuntu-latest
+    needs: [quality, smoke]
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10
+          run_install: false
+
+      - name: Use Node.js 20
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: pnpm
+          cache-dependency-path: pnpm-lock.yaml
+
+      - run: pnpm install
+      - run: pnpm test
+
+  package:
+    name: Build & Package
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10
+          run_install: false
+
+      - name: Use Node.js 20
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: pnpm
+          cache-dependency-path: pnpm-lock.yaml
+
+      - run: pnpm install
+      - name: Build Zip
+        run: pnpm zip
+      - name: Enforce size budget
+        run: |
+          ZIP=$(ls .output/**/*.zip | head -n 1)
+          if [ -z "$ZIP" ]; then
+            echo "No zip file found in .output."
+            exit 1
+          fi
+          max_kb=1024
+          size_kb=$(du -k "$ZIP" | cut -f1)
+          echo "Package size: ${size_kb} KB (limit ${max_kb} KB) at ${ZIP}"
+          if [ "$size_kb" -gt "$max_kb" ]; then
+            echo "Package exceeds size budget."
+            exit 1
+          fi
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: nufftabs-extension
+          path: .output/**/*.zip
+          if-no-files-found: error
+
+  release:
+    name: Release
+    runs-on: ubuntu-latest
+    needs: package
+    if: startsWith(github.ref, 'refs/tags/v')
+    steps:
+      - uses: actions/checkout@v4
+      - name: Download Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: nufftabs-extension
+          path: dist
+      - name: Create Release
+        uses: softprops/action-gh-release@v2
+        with:
+          files: dist/**/*.zip
+          draft: true
