--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "zip": "wxt zip",
     "zip:firefox": "wxt zip -b firefox",
     "compile": "tsc --noEmit",
+    "quality": "pnpm compile",
+    "smoke": "pnpm build",
+    "smoke:e2e": "pnpm test:e2e",
+    "package": "pnpm zip",
     "postinstall": "wxt prepare",
     "test": "vitest run --coverage",
     "test:watch": "vitest",
