chore: add chrome types for tsc

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.51.1",
+    "@types/chrome": "^0.1.36",
     "@types/node": "^22.10.2",
     "@vitest/coverage-v8": "^2.1.4",
     "jsdom": "^24.1.3",
