--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "zip": "wxt zip",
     "zip:firefox": "wxt zip -b firefox",
     "compile": "tsc --noEmit",
-    "quality": "pnpm compile",
+    "lint": "biome check .",
+    "quality": "pnpm compile && pnpm lint",
     "smoke": "pnpm build",
     "smoke:e2e": "pnpm test:e2e",
     "package": "pnpm zip",
@@ -23,6 +24,7 @@
     "test:e2e": "pnpm build:e2e && playwright test"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.3.12",
     "@playwright/test": "^1.51.1",
     "@types/chrome": "^0.1.36",
     "@types/node": "^22.10.2",
