--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "zip:firefox": "wxt zip -b firefox",
     "compile": "tsc --noEmit",
     "lint": "biome check .",
+    "lint:webext": "pnpm build:firefox && web-ext lint --source-dir .output/firefox-mv2 --self-hosted",
+    "biome": "biome check .",
     "quality": "pnpm compile && pnpm lint",
-    "smoke": "pnpm build",
+    "smoke": "node scripts/smoke.mjs",
     "smoke:e2e": "pnpm test:e2e",
     "package": "pnpm zip",
     "postinstall": "wxt prepare",
@@ -32,6 +34,7 @@
     "jsdom": "^24.1.3",
     "typescript": "^5.9.3",
     "vitest": "^2.1.4",
+    "web-ext": "^9.2.0",
     "wxt": "^0.20.6"
   }
 }
