chore: align biome scripts with format target

--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "zip": "wxt zip",
     "zip:firefox": "wxt zip -b firefox",
     "compile": "tsc --noEmit",
-    "lint": "biome check .",
+    "lint": "biome lint .",
     "lint:webext": "pnpm build:firefox && web-ext lint --source-dir .output/firefox-mv2 --self-hosted",
     "biome": "biome check .",
+    "format": "biome format .",
     "quality": "pnpm compile && pnpm lint",
     "smoke": "node scripts/smoke.mjs",
     "smoke:e2e": "pnpm test:e2e",
