ci: fix zip discovery in size check

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -111,7 +111,7 @@ jobs:
         run: pnpm package
       - name: Enforce size budget
         run: |
-          ZIP=$(ls .output/**/*.zip | head -n 1)
+          ZIP=$(find .output -name "*.zip" -print -quit)
           if [ -z "$ZIP" ]; then
             echo "No zip file found in .output."
             exit 1
