--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -127,7 +127,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: nufftabs-extension
-          path: .output/**/*.zip
+          path: .output/*.zip
           if-no-files-found: error
 
   release:
