--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,18 @@
 name: CI
 
 on:
-  push:
-    branches: [master]
-  pull_request:
   workflow_dispatch:
+  pull_request:
+  push:
+    tags:
+      - "v*"
+    branches:
+      - main
+      - release/*
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   quality:
@@ -95,6 +103,9 @@ jobs:
     name: Build & Package
     runs-on: ubuntu-latest
     needs: test
+    if: github.ref == 'refs/heads/main'
+    environment:
+      name: staging
     steps:
       - uses: actions/checkout@v4
 
