--- a/.github/workflows/create-draft-release.yml
+++ b/.github/workflows/create-draft-release.yml
@@ -22,6 +22,16 @@ jobs:
           fetch-depth: 0
           fetch-tags: true
 
+      - name: Use Node.js 20
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      - name: Validate release tag format
+        run: |
+          VERSION="$(node scripts/version-from-tag.mjs "${{ github.ref_name }}")"
+          echo "Validated release version: ${VERSION}"
+
       - name: Check for existing release
         run: |
           if gh release view "${{ github.ref_name }}" > /dev/null 2>&1; then
