--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,11 +14,13 @@ permissions:
 jobs:
   publish-github-release:
     runs-on: ubuntu-latest
+    env:
+      RELEASE_TAG: ${{ github.event.release.tag_name }}
     steps:
       - name: Checkout repository at release tag
         uses: actions/checkout@v4
         with:
-          ref: refs/tags/${{ github.event.release.tag_name }}
+          ref: refs/tags/${{ env.RELEASE_TAG }}
           fetch-depth: 0
           fetch-tags: true
 
@@ -35,9 +37,31 @@ jobs:
           cache: pnpm
           cache-dependency-path: pnpm-lock.yaml
 
+      - name: Derive release version from tag
+        run: |
+          VERSION="$(node scripts/version-from-tag.mjs "${RELEASE_TAG}")"
+          echo "RELEASE_VERSION=${VERSION}" >> "$GITHUB_ENV"
+          echo "Using release version: ${VERSION}"
+
       - run: pnpm install
       - name: Build zip
         run: pnpm package
+
+      - name: Verify built manifest version matches release tag
+        run: |
+          MANIFEST=$(find .output -path "*/manifest.json" -print -quit)
+          if [ -z "$MANIFEST" ]; then
+            echo "No manifest.json found under .output."
+            exit 1
+          fi
+
+          VERSION_IN_MANIFEST=$(node -e "const fs=require('node:fs');const manifestPath=process.argv[1];const manifest=JSON.parse(fs.readFileSync(manifestPath,'utf8'));if(!manifest.version){process.exit(2)};process.stdout.write(manifest.version);" "$MANIFEST")
+
+          if [ "${VERSION_IN_MANIFEST}" != "${RELEASE_VERSION}" ]; then
+            echo "Manifest version '${VERSION_IN_MANIFEST}' does not match RELEASE_VERSION '${RELEASE_VERSION}'."
+            exit 1
+          fi
+          echo "Manifest version verified at ${VERSION_IN_MANIFEST} (${MANIFEST})."
 
       - name: Resolve zip path
         id: zip_path
@@ -62,7 +86,7 @@ jobs:
 
       - name: Upload release asset
         run: |
-          gh release upload "${{ github.event.release.tag_name }}" \
+          gh release upload "${RELEASE_TAG}" \
             "${{ steps.zip_path.outputs.path }}" \
             --clobber
         env:
